Wed Jul 15 15:55:02 2020  Rob Lauer  <rlauer6@comcast.net>

	* makala/aws/utils.py:
	(main): new
	(lambda_add_permission): new
	(get_caller_identity): new
	(get_caller_account): new
	(list_role_policies): new
	(create_lambda_execution_role): do not add AWSLambdaRole by default

Mon Jul 13 16:11:20 2020  Rob Lauer  <rlauer6@comcast.net>

	* makala/data/Makefile.jinja2:
	(check): depends on zipfile

Mon Jul 13 15:54:55 2020  Rob Lauer  <rlauer6@comcast.net>

	* makala/makala_config.py: log message, not print

Mon Jul 13 15:52:52 2020  Rob Lauer  <rlauer6@comcast.net>

	* makala/aws/vpc_config.py:
	- get_private_subnet_ids() for default subnets
	- log messages

Mon Jul 13 15:51:32 2020  Rob Lauer  <rlauer6@comcast.net>

	* makala/utils.py:
	(get_private_subnet_ids): new

Mon Jul 13 13:54:36 2020  Rob Lauer  <rlauer6@comcast.net>

	* makala/makala_config.py: for int parameters

Mon Jul 13 13:50:37 2020  Rob Lauer  <rlauer6@comcast.net>

	* makala/makala.py: generate stub
	* makala/lambda_config.py: likewise
	(generate stub): new

Mon Jul 13 13:46:33 2020  Rob Lauer  <rlauer6@comcast.net>

	* makala/data/Makefile.jinja2:
	- just touch target for permission when no service provided
	(check): check for Active

Mon Jul 13 12:12:29 2020  Rob Lauer  <rlauer6@comcast.net>

	[service]:
	* makala/data/Makefile.jinja2: add service permission

	[logging]:
	* makala/aws/lambda_role.py: replace print w/logging
	* makala/aws/utils.py: likewise
	* makala/makala.py: likewise

Mon Jul 13 08:42:37 2020  Rob Lauer  <rlauer6@comcast.net>

	[refactor, use classes]:
	* makala/makala.py: use AWSVPCConfig, AWSLambdaRole, LambdaConfig
	* makala/lambda_config.py:
	(LambdaConfig): first commit
	(EnvironmentVars): first commit
	* makala/aws/vpc_config.py: new
	* makala/aws/lambd_role.py: new
	* Makefile: add above to build
	* makala/data/Makefile.jinja2:
	- initial create depends on {lambda}-role.arn
	- duplicate $(LAMBDA_ARN) in CLEANFILES
	* makala/utils.py:
	(list_role_policies): new